force-app/main/default/objects/SmartIntake_Context_Config__mdt/SmartIntake_Context_Config__mdt.object-meta.xml
<CustomObject>
    <label>SmartIntake Context Config</label>
    <pluralLabel>SmartIntake Context Configs</pluralLabel>
</CustomObject>