force-app/main/default/objects/SmartIntake_Context_Config__mdt/fields/Allowed_Actions__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Actions__c</fullName>
    <label>Allowed Actions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>