force-app/main/default/objects/SmartIntake_Context_Config__mdt/fields/Context_Config_Key__c.field-meta.xml
<CustomField>
    <fullName>Context_Config_Key__c</fullName>
    <label>Context Config Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>