force-app/main/default/objects/SmartIntake_Context_Config__mdt/fields/Context_Message__c.field-meta.xml
<CustomField>
    <fullName>Context_Message__c</fullName>
    <label>Context Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>