force-app/main/default/objects/SmartIntake_Context_Config__mdt/fields/Context_Type__c.field-meta.xml
<CustomField>
    <fullName>Context_Type__c</fullName>
    <label>Context Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>