force-app/main/default/objects/SmartIntake_Context_Config__mdt/fields/Filter_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Filter_Field_API_Name__c</fullName>
    <label>Filter Field API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>