force-app/main/default/objects/SmartIntake_Context_Config__mdt/fields/Filter_Source_Question_Key__c.field-meta.xml
<CustomField>
    <fullName>Filter_Source_Question_Key__c</fullName>
    <label>Filter Source Question Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>