force-app/main/default/objects/SmartIntake_Context_Config__mdt/fields/Max_Records__c.field-meta.xml
<CustomField>
    <fullName>Max_Records__c</fullName>
    <label>Max Records</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>